[tool.poetry]
name = "dataset"
version = "0.1.0"
description = ""
authors = ["Yu Zhang <yuzhang94@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
libprocess = "^0.1.3"
libprocess-extensions = "^0.1.0"


[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.7.0"}
pandas = "^2.0.3"
tabulate = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
